se agrego una lista al index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
 <body>
     <h1>Hola mundo</h1>
     <p>trabajando con git flow</p>
+    <h1>como ser un buen programador</h1>
+    <ul>
+        <li>ve código</li>
+        <li>lee código</li>
+        <li>escribe  código</li>
+
+    </ul>
 </body>
 </html>
